# chest-cancer-classification-ml

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
research/: trials.ipynb
